# invest-track

./: .env.example  .flake8  .version  Dockerfile  Makefile  README.md  docker-compose-dev.yml  docker-compose.yml  nginx.conf  pyproject.toml
Django/: Dockerfile  gunicorn.py  pyproject.toml  requirements.txt
Django/alphavantage/: api.py  models.py
Django/ativa_investimentos/: admin.py  apps.py  models.py
Django/core/: settings.py  settings_test.py  urls.py  wsgi.py
Django/dashboard/: script.py  urls.py  utils.py  views.py
Django/templates/: company_details.html  components.yaml  multiple_normalized_companies.html
Django/yahoo_finances/: admin.py  api.py  models.py  serializers.py  urls.py  utils.py  views.py
alphavantage/: apps.py
alphavantage/migrations/: 0001_initial.py
alphavantage/tests/: test_api.py
ativa_investimentos/: models.py  urls.py  views.py
ativa_investimentos/fixtures/: stock_position.json
ativa_investimentos/scripts/: load_all_daily_stock_history.py
core/: asgi.py  settings.py  urls.py  utils.py
core/base/: admin.py  models.py
dashboard/: script.py
infomoney/: admin.py  apis.py  apps.py  converters.py  models.py  tests.py
infomoney/migrations/: 0001_initial.py  0002_alter_highlow_volume.py
templates/: company_details.html  components.yaml  multiple_companies.html
templates/components/: header.html  line_chart.html  line_chart_alpinejs.html
templates/pages/: home.html
templates/sections/: stocks.html
yahoo_finances/: apps.py  models.py  serializers.py  utils.py  views.py
yahoo_finances/tests/: test_company.py  (+1 more)
(+27 files in other folders)
