[project]
dependencies = [
  "django>=5.1.5",
  "django-auditlog>=3.0.0",
  "django-filter>=24.3",
  "djangorestframework>=3.15.2",
  "drf-yasg>=1.21.8",
  "faker>=33.3.1",
  "flake8>=7.1.1",
  "gunicorn>=23.0.0",
  "httpx>=0.28.1",
  "ipdb>=0.13.13",
  "model-bakery>=1.20.1",
  "pandas>=2.2.3", # "polars>=1.20.0",
  "psycopg2-binary>=2.9.10",
  "requests>=2.32.3",
  "selenium>=4.28.0",
  "slippers>=0.6.2",
  "taskipy>=1.14.1",
  "yfinance>=0.2.52",
]
description = "Add your description here"
name = "invest-track"
readme = "README.md"
requires-python = ">=3.13.1"
version = "0.1.0"
